--- a/views/examples/example4.jade
+++ b/views/examples/example4.jade
@@ -3,6 +3,8 @@ block scripts
     script(src="/javascripts/detached.js")
 block content
     h1 #{title}: Detached nodes
+    p Watch nodes evolution in memory timeline
+    p Take heap snapshots and find detached nodes
     p
         button(onclick="createDetachedNodes()") Create detached nodes
     p
