I meant V8 hidden classes

--- a/views/examples/example6.jade
+++ b/views/examples/example6.jade
@@ -3,7 +3,7 @@ block scripts
     script(src="/javascripts/nodeleak.js")
 block content
     h1 #{title}: Leaking DOM nodes
-    p If the compiler can use inner classes, your code will execute MUCH faster and will use MUCH LESS memory.
+    p If the compiler can use hidden classes, your code will execute MUCH faster and will use MUCH LESS memory.
     ol
         li Open Timeline tab.
         li Start recording activty.
