--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ block content
         li: a(target="_blank", href="/example/2") Example 2: Garbage collection in action
         li: a(target="_blank", href="/example/3") Example 3: Scattered objects
         li: a(target="_blank", href="/example/4") Example 4: Detached nodes
-        li: a(target="_blank", href="/example/5") Example 5: Memory and inner classes
+        li: a(target="_blank", href="/example/5") Example 5: Memory and hidden classes
         li: a(target="_blank", href="/example/6") Example 6: Leaking DOM nodes
         li: a(target="_blank", href="/example/7") Example 7: Eval is evil (almost always)
         li: a(target="_blank", href="/example/8") Example 8: Recording heap allocations
