feat(dominator example) added dominators example

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,3 +15,6 @@ block content
         li: a(target="_blank", href="/example/9") Example 9: DOM leaks bigger than expected
         li: a(target="_blank", href="/example/10") Example 10: Retaining path
         li: a(target="_blank", href="/example/11") Example 11: Last exercise
+    h1 Explanations & graphs
+    ul
+        li: a(target="_blank", href="/docs/1") Doc 1: Dominator and dominated nodes
