--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    block stylesheets
     block scripts
   body
     block content
